--- a/app.css
+++ b/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
+
+.disabledButton {
+    @apply bg-blue-100
+}
+
+.outOfStock {
+    @apply line-through
+}
+
 @tailwind utilities;
